--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#about">Skills</a></li>
+                    <li><a href="#skill-container">Skills</a></li>
                     <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </nav>
@@ -37,9 +37,9 @@
                 </div>
                 <div class="social-banner">
 
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-hackerrank"></i></a>
+                    <a href="https://github.com/VildanHakanaj" target="blank"><i class="fab fa-github"></i></a>
+                    <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" target="blank"><i class="fab fa-hackerrank"></i></a>
                 </div>
             </div>
             <div class="arrows">
@@ -70,7 +70,7 @@
                         of type and scrambled it to make a type specim</p>
                     <div class="project-buttons">
                         <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn-outline"><i class="fas fa-code"></i>View Code</a>
+                        <a href="#" class="btn-outline" target="blank"><i class="fas fa-code"></i>View Code</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         of type and scrambled it to make a type specim</p>
                     <div class="project-buttons">
                         <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn-outline"><i class="fas fa-code"></i>View Code</a>
+                        <a href="#" class="btn-outline" target="blank"><i class="fas fa-code"></i>View Code</a>
                     </div>
                 </div>
                 <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
@@ -118,7 +118,7 @@
                         of type and scrambled it to make a type specim</p>
                     <div class="project-buttons">
                         <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn-outline"><i class="fas fa-code"></i>View Code</a>
+                        <a href="#" class="btn-outline" target="blank"><i class="fas fa-code"></i>View Code</a>
                     </div>
                 </div>
             </div>
@@ -140,9 +140,10 @@
                 <div class="social-media">
                     <h4>Follow Me On:</h4>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-hackerrank"></i></a>
+                        <a href="https://www.facebook.com/vildan.hakanaj.9" target="blank"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://github.com/VildanHakanaj" target="blank"><i class="fab fa-github"></i></a>
+                        <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" target="blank"><i class="fab fa-hackerrank"></i></a>
                     </div>
                 </div>
             </div>
@@ -150,7 +151,7 @@
     </div>
     <div id="skills">
         <div class="container">
-            <div class="skill-container">
+            <div id="skill-container">
                 <div class="left side-box box">
                     <h3><i class="fas fa-code"></i> Front End</h3>
                     <ul>
