--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Passero+One|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/css/all.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Document</title>
 </head>
 
@@ -52,10 +53,10 @@
         <div class="container">
             <h1 class="section-title">My Projects</h1>
 
-            <div class="project-container">
+            <div class="project-container" >
                 <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-                    alt="">
-                <div class="project-info">
+                    alt="" data-aos="fade-right">
+                <div class="project-info" data-aos="fade-left">
                     <h3>Project Title</h3>
                     <div class="tech-stack">
                         <i class="fab fa-laravel"></i>
@@ -77,7 +78,7 @@
             <!-- END OF THE PROJECT CONTAINER -->
 
             <div class="project-container">
-                <div class="project-info">
+                <div class="project-info" data-aos="fade-right">
                     <h3>Project Title</h3>
                     <div class="tech-stack">
                         <i class="fab fa-laravel"></i>
@@ -96,14 +97,14 @@
                     </div>
                 </div>
                 <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    alt="">
+                    alt="" data-aos="fade-left">
             </div>
             <!-- END OF THE PROJECT CONTAINER -->
 
             <div class="project-container">
                 <img src="https://images.unsplash.com/photo-1530435460869-d13625c69bbf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
-                    alt="">
-                <div class="project-info">
+                    alt="" data-aos="fade-right">
+                <div class="project-info" data-aos="fade-left">
                     <h3>Project Title</h3>
                     <div class="tech-stack">
                         <i class="fab fa-laravel"></i>
@@ -199,7 +200,12 @@
     <div id="contact">
         <a href="#" class="email-btn">Email Me</a>
     </div>
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+          duration: 1000
+      });
+    </script>
 </body>
 
 </html>
