Made the project section responsive

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <!-- END OF THE PROJECT CONTAINER -->
 
-            <div class="project-container">
+            <div class="project-container bottom">
                 <div class="project-info" data-aos="fade-right">
                     <h3>Project Title</h3>
                     <div class="tech-stack">
