--- a/index.html
+++ b/index.html
@@ -212,5 +212,27 @@
         </div>
     </div>
 </div>
+<div id="about-me">
+    <div class="container">
+        <h1 class="section-title">About Me</h1>
+        <div class="about-me-text">
+            <h1>Hi I'm Vildan Hakanaj.</h1>
+            <p>Since beginning my journey as a freelance designer nearly 8 years ago, I've done remote work for
+                agencies, consulted for startups, and collaborated with talented people to create digital products
+                for both business and consumer use. I'm quietly confident, naturally curious, and perpetually
+                working on improving my chops one design problem at a time.
+            </p>
+            <div class="social-media">
+                <h4>Follow Me On:</h4>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/vildan.hakanaj.9" target="blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://github.com/VildanHakanaj" target="blank"><i class="fab fa-github"></i></a>
+                    <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" target="blank"><i class="fab fa-hackerrank"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
