added skills section

--- a/index.html
+++ b/index.html
@@ -234,5 +234,51 @@
         </div>
     </div>
 </div>
+<div id="skills-section">
+    <div class="container">
+        <div class="skills-container">
+            <div class="front-end">
+                <h3><i class="fas fa-code"></i> Front End</h3>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Javascript</li>
+                    <li>Bootstrap</li>
+                    <li>Materialize</li>
+                    <li>Tailwind</li>
+                    <li>VueJS</li>
+                    <li>Bulma</li>
+                </ul>
+            </div>
+            <div class="backend">
+                <h3><i class="fas fa-cogs"></i> Back End</h3>
+                <ul>
+                    <li>Laravel</li>
+                    <li>PHP</li>
+                    <li>MYSQL / MongoDB</li>
+                    <li>REST</li>
+                    <li>UNIX</li>
+                    <li>Node.JS</li>
+                    <li>C#</li>
+                    <li>MVC</li>
+                </ul>
+            </div>
+            <div class="other">
+                <h3>Other</h3>
+                <ul>
+                    <li>VSCode</li>
+                    <li>Sublime</li>
+                    <li>CLI</li>
+                    <li>XAMPP</li>
+                    <li>PHP Storm</li>
+                    <li>Office Suite</li>
+                    <li>Photoshop</li>
+                    <li>Illustrator</li>
+                    <li>Figma</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
