--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#" class="btn btn-fill">Contact Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#about-me">About</a></li>
+                    <li><a href="#about-me">Skills</a></li>
+                    <li><a href="#contact-me" class="btn btn-fill">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -36,13 +36,13 @@
                     sectetur adipisicing elit. Alias, maiores non porro quam quis quo.</p>
             </div>
             <div class="buttons">
-                <a href="#" class="btn btn-fill">Github</a>
+                <a href="https://github.com/VildanHakanaj" class="btn btn-fill">Github</a>
                 <a href="#" class="btn btn-outline btn-prim">Resume</a>
             </div>
             <div class="social-icons">
-                <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="blank"><i class="fab fa-hackerrank"></i></a>
-                <a href="#" target="blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.linkedin.com/in/vildan-hakanaj-013582171/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.hackerrank.com/ahakanaj" target="blank"><i class="fab fa-hackerrank"></i></a>
+                <a href="https://www.facebook.com/vildan.hakanaj.9" target="blank"><i class="fab fa-facebook-square"></i></a>
             </div>
         </div>
     </div>
@@ -227,8 +227,8 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com/vildan.hakanaj.9" target="blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="https://github.com/VildanHakanaj" target="blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="blank"><i class="fab fa-hackerrank"></i></a>
+                    <a href="https://www.linkedin.com/in/vildan-hakanaj-013582171/" target="blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.hackerrank.com/ahakanaj" target="blank"><i class="fab fa-hackerrank"></i></a>
                 </div>
             </div>
         </div>
@@ -279,6 +279,9 @@
             </div>
         </div>
     </div>
+</div>
+<div id="contact-me">
+    <a href="mailto:vildanhakanaj@trentu.ca">Email me</a>
 </div>
 </body>
 </html>
