--- a/index.html
+++ b/index.html
@@ -23,22 +23,19 @@
                 <ul>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#about-me">About</a></li>
-                    <li><a href="#about-me">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact-me" class="btn btn-fill">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
         <div class="banner-content">
             <div class="info-text">
-                <h1>Software Developer / Designer</h1>
-                <p>Lorem ipsum dolor sit amet, con Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci ea
-                    enim eos error harum, illum iste iure maxime nemo neque nesciunt nulla odit quaerat quibusdam
-                    reiciendis tempore totam, ut voluptates.
-                    sectetur adipisicing elit. Alias, maiores non porro quam quis quo.</p>
+                <h1>Full Stack Developer</h1>
+                <p></p>
             </div>
             <div class="buttons">
                 <a href="https://github.com/VildanHakanaj" class="btn btn-fill">Github</a>
-                <a href="#" class="btn btn-outline btn-prim">Resume</a>
+                <a href="Vildan%20Hakanaj.htm" target="_blank" class="btn btn-outline btn-prim">Resume</a>
             </div>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/vildan-hakanaj-013582171/" target="blank"><i class="fab fa-linkedin"></i></a>
@@ -53,7 +50,7 @@
         <h1 class="section-title">Projects</h1>
         <div class="project" >
             <div class="project-img" data-aos="fade-right">
-                <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
+                <img src="https://media.giphy.com/media/hTIsFq8TOsQiJ8ycNn/giphy.gif" alt="">
             </div>
             <div class="project-details" data-aos="fade-left">
                 <h2>Booking System</h2>
@@ -66,84 +63,36 @@
                     <i class="fab fa-sass"></i>
                 </div>
                 <p class="project-description">
-                    Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Aperiam earum esse, excepturi itaque quae
-                    tempora velit. Accusamus aperiam, blanditiis commodi cumque dolor
-                    dolorum enim error esse exercitationem, facere fugit harum illum
-                </p>
-                <p>
-                    inventore ipsam, iste laboriosam magnam nesciunt nihil quae ullam.
-                    consectetur adipisicing elit. Atque beatae delectus earum esse illum
-                    inventore ipsa, laudantium necessitatibus nisi quas suscipit ut.
-                    Aperiam cumque dignissimos error maxime odio placeat ullam!
+                    A booking system used from Trent University that allows professors to upload
+                    school equipment that students can book and use for their school projects.
+                    Its easy to use and keeps an inventory on all equipments for departments.
                 </p>
                 <div class="project-buttons">
-                    <a href="#" class="btn btn-fill">View Project</a>
-                    <a href="#" class="btn btn-outline btn-sec"><i class="fas fa-code"></i>View Code</a>
+                    <a href="https://msbookings.trentu.ca" class="btn btn-fill">View Project</a>
+                    <a href="https://github.com/VildanHakanaj/Booking_system.git" class="btn btn-outline btn-sec"><i
+                            class="fas fa-code"></i>View Code</a>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class="project-img" data-aos="fade-left">
-                <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
+                <img src="./images/projects/wordbeater.png" alt="">
             </div>
             <div class="project-details" data-aos="fade-right">
                 <h2>Booking System</h2>
                 <div class="tech-stack-icons">
-                    <i class="fab fa-laravel"></i>
                     <i class="fab fa-html5"></i>
                     <i class="fab fa-css3-alt"></i>
-                    <i class="fab fa-bootstrap"></i>
                     <i class="fab fa-git"></i>
-                    <i class="fab fa-sass"></i>
+                    <i class="fab fa-js-square" style="color: #f0DB4F"></i>
                 </div>
                 <p class="project-description">
-                    Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Aperiam earum esse, excepturi itaque quae
-                    tempora velit. Accusamus aperiam, blanditiis commodi cumque dolor
-                    dolorum enim error esse exercitationem, facere fugit harum illum
-                </p>
-                <p>
-                    inventore ipsam, iste laboriosam magnam nesciunt nihil quae ullam.
-                    consectetur adipisicing elit. Atque beatae delectus earum esse illum
-                    inventore ipsa, laudantium necessitatibus nisi quas suscipit ut.
-                    Aperiam cumque dignissimos error maxime odio placeat ullam!
+                    How fast can you type? Word Beater is a game that test you ability to type fast.
+                    Random words are shown on your screen and you have to type them out before the time runs out.
                 </p>
                 <div class="project-buttons">
-                    <a href="#" class="btn btn-fill">View Project</a>
-                    <a href="#" class="btn btn-outline btn-sec"><i class="fas fa-code"></i>View Code</a>
-                </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class="project-img" data-aos="fade-right">
-                <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
-            </div>
-            <div class="project-details" data-aos="fade-left">
-                <h2>Booking System</h2>
-                <div class="tech-stack-icons">
-                    <i class="fab fa-laravel"></i>
-                    <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3-alt"></i>
-                    <i class="fab fa-bootstrap"></i>
-                    <i class="fab fa-git"></i>
-                    <i class="fab fa-sass"></i>
-                </div>
-                <p class="project-description">
-                    Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Aperiam earum esse, excepturi itaque quae
-                    tempora velit. Accusamus aperiam, blanditiis commodi cumque dolor
-                    dolorum enim error esse exercitationem, facere fugit harum illum
-                </p>
-                <p>
-                    inventore ipsam, iste laboriosam magnam nesciunt nihil quae ullam.
-                    consectetur adipisicing elit. Atque beatae delectus earum esse illum
-                    inventore ipsa, laudantium necessitatibus nisi quas suscipit ut.
-                    Aperiam cumque dignissimos error maxime odio placeat ullam!
-                </p>
-                <div class="project-buttons">
-                    <a href="#" class="btn btn-fill">View Project</a>
-                    <a href="#" class="btn btn-outline btn-sec"><i class="fas fa-code"></i>View Code</a>
+                    <a href="https://vildanhakanaj.github.io/WordBeater/" class="btn btn-fill">View Project</a>
+                    <a href="https://github.com/VildanHakanaj/WordBeater" class="btn btn-outline btn-sec"><i class="fas fa-code"></i>View Code</a>
                 </div>
             </div>
         </div>
@@ -154,10 +103,11 @@
         <h1 class="section-title">About Me</h1>
         <div class="about-me-text">
             <h1>Hi I'm Vildan Hakanaj.</h1>
-            <p>Since beginning my journey as a freelance designer nearly 8 years ago, I've done remote work for
-                agencies, consulted for startups, and collaborated with talented people to create digital products
-                for both business and consumer use. I'm quietly confident, naturally curious, and perpetually
-                working on improving my chops one design problem at a time.
+            <p>
+                I'm a Software developer who loves creating new and exiting projects
+            </p>
+            <p>
+                I graduated from Trent University with a computer science degree.
             </p>
             <div class="social-media">
                 <h4>Follow Me On:</h4>
@@ -187,7 +137,7 @@
                     <li>Bulma</li>
                 </ul>
             </div>
-            <div class="backend">
+            <div class="backend" id="skills">
                 <h3><i class="fas fa-cogs"></i> Back End</h3>
                 <ul>
                     <li>Laravel</li>
