added the correct text on the paragraphs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <div class="banner-content">
             <div class="info-text">
                 <h1>Full Stack Developer</h1>
-                <p></p>
+                <p>
+                    I love working on exiting new projects that will make an impact in the society.
+                </p>
             </div>
             <div class="buttons">
                 <a href="https://github.com/VildanHakanaj" class="btn btn-fill">Github</a>
@@ -104,10 +106,7 @@
         <div class="about-me-text">
             <h1>Hi I'm Vildan Hakanaj.</h1>
             <p>
-                I'm a Software developer who loves creating new and exiting projects
-            </p>
-            <p>
-                I graduated from Trent University with a computer science degree.
+                I'm a Software developer who loves creating new and exiting projects 5 Years ago i moved to Canada to pursue my Education at Trent University in Computer Science. In my free time i love playing with electroincs trying to repair an learn more.
             </p>
             <div class="social-media">
                 <h4>Follow Me On:</h4>
