Change the tab title and the title for on of the projects

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vildan Hakanaj | Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Passero+One|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/css/main.css">
     <link rel="stylesheet" href="styles/css/all.css">
@@ -81,7 +81,7 @@
                 <img src="./images/projects/wordbeater.png" alt="">
             </div>
             <div class="project-details" data-aos="fade-right">
-                <h2>Booking System</h2>
+                <h2>Word Beater</h2>
                 <div class="tech-stack-icons">
                     <i class="fab fa-html5"></i>
                     <i class="fab fa-css3-alt"></i>
